# easy-eo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  latest-deps.yml  release.yml
docs/source/: backends.rst  conf.py  getting_started.rst  index.rst
docs/source/modules/: adapters.rst  analysis.rst  core.rst  datasets.rst  ops.rst  preprocessing.rst  viz.rst
docs/source/user_guide/: band_names.rst  core_dataset.rst  nodata_and_dtype.rst  ops.rst  preprocessing.rst  sample_data.rst  spectral_indices.rst  statistical_locations.rst  visualization.rst
eeo/: __init__.py  _show_versions.py  common.py
eeo/analysis/: __init__.py  indices.py  indices.pyi  stats.py  stats.pyi
eeo/core/: __init__.py  core.py  core.pyi  decorators.py  exceptions.py  loader.py  loader.pyi  plugins.py  types.py
eeo/core/adapters/: __init__.py  base.py  numpy.py  rasterio.py
eeo/datasets/: __init__.py  _cache.py  _registry.py
eeo/ops/: __init__.py  algebra.py  algebra.pyi  merge.py  merge.pyi
eeo/preprocessing/: __init__.py  clip.py  clip.pyi  normalize.py  normalize.pyi  reproject.py  reproject.pyi  resample.py  resample.pyi
eeo/viz/: __init__.py  plot.py  plot.pyi
examples/: 00_test_installation.ipynb  01_read_file.ipynb  02_normalized_difference.ipynb  03_selected_operations.ipynb  04_stacking_and_merging.ipynb
scripts/: generate_core_stub.py
tests/: conftest.py  module_analysis_tests.py  module_viz_tests.py  test_analysis.py  test_backend_promotion.py  test_band_names.py  test_band_names_matrix.py  test_chaining_regression.py  test_conf.py  test_datasets.py  test_describe.py  test_error_model.py  test_exceptions.py  test_fixtures.py  test_indices.py  test_loaders.py  test_merge.py  test_ops.py  test_ops_contract.py  test_preprocessing.py  test_provenance.py  test_resampling_utils.py  test_show_versions.py  test_stub_freshness.py  test_viz.py
