[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-eo"
version = "0.1.0b1"
description = "A lightweight Earth Observation utilities library for chainable raster operations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["remote sensing", "earth observation", "raster", "gis"]

authors = [
    { name = "Thomas Burns Botchwey", email = "" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]


dependencies = [
    "rasterio>=1.4,<2",
    "geopandas>=1.1,<2",
    "numpy>=1.26,<3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/tommy-burns/easy-eo"
Repository = "https://github.com/tommy-burns/easy-eo"
Documentation = "https://easy-eo.readthedocs.io"
Issues = "https://github.com/tommy-burns/easy-eo/issues"


# ---------------------
# Hatch build settings
# ---------------------
[tool.hatch.build]
include = [
    "eeo",
]

[tool.hatch.build.targets.wheel]
packages = ["eeo"]

# Optional but handy
[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

# ---------------------
# Ruff (lint + format)
# ---------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["eeo", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.isort]
known-first-party = ["eeo"]

[tool.ruff.lint.per-file-ignores]
# eeo/__init__.py re-exports submodules with `import *` so that importing
# them registers ops on EEORasterDataset via the @eeo_raster_op /
# @eeo_raster_viz decorators (see eeo/core/decorators.py) — this is a
# deliberate plugin-registration side effect, not an oversight.
"eeo/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
