[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-eo"
version = "0.1.0b1"
description = "A lightweight Earth Observation utilities library for chainable raster operations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["remote sensing", "earth observation", "raster", "gis"]

authors = [
    { name = "Thomas Burns Botchwey", email = "" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]


dependencies = [
    "rasterio>=1.4,<2",
    "geopandas>=1.1,<2",
    "numpy>=1.26,<3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/tommy-burns/easy-eo"
Repository = "https://github.com/tommy-burns/easy-eo"
Documentation = "https://easy-eo.readthedocs.io"
Issues = "https://github.com/tommy-burns/easy-eo/issues"


# ---------------------
# Hatch build settings
# ---------------------
[tool.hatch.build]
include = [
    "eeo",
]

[tool.hatch.build.targets.wheel]
packages = ["eeo"]

# PEP 561: the py.typed marker and the generated core stub must ship in the
# wheel so downstream type checkers pick up Easy-EO's inline annotations and
# the dynamically-bound method signatures.
[tool.hatch.build.targets.wheel.force-include]
"eeo/py.typed" = "eeo/py.typed"
"eeo/core/core.pyi" = "eeo/core/core.pyi"

# Optional but handy
[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

# ---------------------
# Ruff (lint + format)
# ---------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["eeo", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.isort]
known-first-party = ["eeo"]

[tool.ruff.lint.per-file-ignores]
# eeo/__init__.py re-exports submodules with `import *` so that importing
# them registers ops on EEORasterDataset via the @eeo_raster_op /
# @eeo_raster_viz decorators (see eeo/core/decorators.py) — this is a
# deliberate plugin-registration side effect, not an oversight.
"eeo/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------
# mypy (type checking)
# ---------------------
[tool.mypy]
python_version = "3.10"
files = ["eeo"]
namespace_packages = true
explicit_package_bases = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

# The geospatial stack ships no type information (no py.typed, no stub
# packages), so mypy cannot analyze it. Suppress the resulting
# import-untyped noise rather than annotating third-party internals.
[[tool.mypy.overrides]]
module = [
    "rasterio",
    "rasterio.*",
    "geopandas",
    "affine",
    "pyproj",
    "pyproj.*",
]
ignore_missing_imports = true

# ---------------------
# pytest
# ---------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Coverage is always measured; the suite fails below the documented ≥80%
# target (see CODE_STYLE.md "Testing Expectations").
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=eeo",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
xfail_strict = true
# Surface warnings as failures so deprecations and numerical warnings can't
# slip through unnoticed. Tests that expect a warning use pytest.warns.
filterwarnings = ["error"]

# ---------------------
# coverage.py
# ---------------------
[tool.coverage.run]
source = ["eeo"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
